--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         // AUTO-LOAD: Load a KMZ file on page load
         // Replace 'your-file.kmz' with the path to your hosted KMZ file
-        // Example: loadKMZFromURL('data/sample.kmz');
+       loadKMZFromURL('Data/Yachats UGB.kmz');
         // Example: loadKMZFromURL('https://yourdomain.com/path/to/file.kmz');
         
         // Uncomment the line below and replace with your KMZ file path:
