--- a/leaflet-map-demo.html
+++ b/leaflet-map-demo.html
@@ -267,7 +267,7 @@
         // - Full URL: loadGeoJSONFromURL('https://yourdomain.com/path/to/file.geojson');
         
         // Uncomment the line below and replace with your GeoJSON file path:
-        // loadGeoJSONFromURL('data.geojson');
+         loadGeoJSONFromURL('Data/Yachats_Zoning.geojson');
 
         // Handle KMZ/KML file upload - REMOVED (keep loadKMZFromURL function for programmatic loading)
 
