--- a/leaflet-map.html
+++ b/leaflet-map.html
@@ -46,7 +46,7 @@
         
         // URL to your GeoJSON file
         // Replace this with the path to your GeoJSON file
-        const geojsonUrl = 'data.geojson';
+        const geojsonUrl = 'GeoJson/Yachats_Zoning2.json';
         
         // Fetch and display the GeoJSON
         fetch(geojsonUrl)
