--- a/leaflet-map.html
+++ b/leaflet-map.html
@@ -133,7 +133,7 @@
         //loadGeoJSON(sampleGeoJSON);
         
         // Option 2: Load from a file (uncomment to use)
-         const geojsonUrl = 'GeoJson/Yachats_Zoning2.json';
+         const geojsonUrl = 'GeoJson/Yachats_Zoning.json';
          fetch(geojsonUrl)
             .then(response => {
                  if (!response.ok) {
