--- a/leaflet-map.html
+++ b/leaflet-map.html
@@ -130,7 +130,7 @@
         }
         
         // Option 1: Use inline GeoJSON (current default)
-        //loadGeoJSON(sampleGeoJSON);
+        loadGeoJSON(sampleGeoJSON);
         
         // Option 2: Load from a file (uncomment to use)
          const geojsonUrl = 'GeoJson/Yachats_Zoning.json';
