--- a/leaflet-map.html
+++ b/leaflet-map.html
@@ -243,7 +243,7 @@
                                 popupContent += `
                                     <div class="image-container">
                                         <div class="image-label">Proposed</div>
-                                        <img src="${feature.properties.img_proposed}" alt="Proposed" class="popup-image">
+                                        <img src="Images/${feature.properties.img_proposed}" alt="Proposed" class="popup-image">
                                     </div>
                                 `;
                             }
