--- a/leaflet-map.html
+++ b/leaflet-map.html
@@ -236,7 +236,7 @@
         }
         
         // Load from a file
-        const geojsonUrl = 'GeoJson/Yachats_Zoning2.json';
+        const geojsonUrl = 'GeoJson/Yachats_Zoning.json';
         fetch(geojsonUrl)
             .then(response => {
                 if (!response.ok) {
